# rustwarrior

./: .mcp.json  .rustfmt.toml  Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml  coverage.yml
.rustwarrior/: open_tasks.ndjson
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  store_ext.rs
cli/src/commands/: add.rs  list.rs
core/: Cargo.toml
core/src/: lib.rs  store.rs  task.rs
core/src/store/: paths.rs
mcp-server/: Cargo.toml  README.md
mcp-server/src/: handler.rs  lib.rs  main.rs  server.rs
mcp-server/src/handler/: resources.rs  tools.rs
mcp-server/src/handler/tools/: complete_task.rs  create_task.rs  delete_task.rs  get_task.rs  list_tasks.rs  search_tasks.rs  set_priority.rs  types.rs
mcp-server/src/tools/: mod.rs
rustwarrior-core/: Cargo.toml
rustwarrior-core/src/: lib.rs  task.rs
rustwarrior-core/src/task/: priority.rs
src/: cli.rs  config.rs  lib.rs  main.rs  store.rs  task.rs
src/cli/: add.rs  list.rs
src/task/: coefficients.rs  priority.rs
