[package]
name = "rustwarrior"
description = "Command-line task tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rw"
path = "src/main.rs"

[dependencies]
rustwarrior-core = { path = "../core" }
anyhow = "1.0.68"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

[dev-dependencies]
shlex = "1.1.0"
tempfile = "3.3.0"
test-case = "3"

[lints]
workspace = true
