[package]
name = "rustwarrior-core"
description = "Core task management logic and persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "2"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3.3.0"
test-case = "3"
