[package]
name = "rustwarrior-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0.91"
test-case = "2.2.2"
